--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,7 +1,10 @@
 .cart{
     position: sticky;
-    top: 0;
+    top: 100px;
+}
+.cart-container{
     padding: 30px 20px;
+
 }
 .clear-cart{
     width: 230px;
