--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -26,3 +26,12 @@ nav{
 .header a:hover{
     color: orange;
 }
+
+.btn-logout{
+    margin: 0 10px;
+    cursor: pointer;
+}
+.user{
+    color: white;
+    margin-left: 10px;   
+}
