--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -21,6 +21,23 @@
     color: white;
 
 } */
+.pagination{
+   display: flex;
+   flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+
+}
+.pagination button{
+    margin-right: 10px;
+    cursor: pointer;
+}
+.pagination .selected{
+    background-color:  goldenrod;
+    border: gold;
+    font-weight: 700;
+    padding: 10px;
+}
 
 @media only screen and  (max-width: 768px) {
     .shop-container{
